Changes from jTDS 0.8-rc1
=========================

04/04/2004 - Alin Sinpalean
 o Cleaned up TEXT and IMAGE sending. Now there's only one method for each of
   them. Also simplified CHAR/VARCHAR and BINARY/VARBINARY sending code.
 o Added an appendChars method to TdsComm that accepts a char array and a length
   as parameters.
 o Moved output logging before the call to TdsSocket.sendNetPacket() to avoid
   logging zeros (if the method returned a new buffer and buffered the old one).
 o Created the Tds.handleEndToken() static method to have a unified handling of
   end token status flags. It's now called for all the end tokens processed.
 o Modified row count handling in Tds. Now the "valid row count" flag and the
   operation code flag are checked and only valid update counts not from SELECTs
   are kept; row counts for DDL statements are always set to 0. Also, update
   counts are returned for CallableStatements too, as Mike suggested. This seems
   to be more or less the behavior of the other SQL Server drivers.
 o CursorResultSet now consumes update counts returned by the sp_cursor stored
   procedures rather than throwing exceptions.
 o Updated the TDS documentation with some new information on end token status
   flags and operation codes.
 o Updated the unit tests that were failing because of the new way update counts
   are managed.

04/03/2004 - Brian Heineman
 o Updated binary data support so that data set via a stream or Blob is not
   cached entirely in memory before being sent to the server.  No more than
   1KB of data read from the stream or Blob is buffered in memory at any time.
 o Updated text data support so that data set via a stream or Clob is not
   cached entirely in memory before being sent to the server.  No more than
   1KB of data read from the stream or Clob is buffered in memory at any time.

04/02/2004 - Brian Heineman
 o Updated Tds.cvtJdbcTypeToNativeType to treat java.sql.Clob as SYBTEXT
   instead of SYBCHAR.