@@ -34,17 +34,15 @@
 
 package net.sourceforge.jtds.jdbc;
 
-import java.lang.Exception;
-
 /**
  * base class for exceptions related to the Tds class.
  *
  * @author Craig Spannring
- * @version  $Id: TdsException.java,v 1.1 2002-10-14 10:48:59 alin_sinpalean Exp $
+ * @version  $Id: TdsException.java,v 1.2 2004-04-06 03:01:53 bheineman Exp $
  */
 public class TdsException extends java.lang.Exception
 {
-   public static final String cvsVersion = "$Id: TdsException.java,v 1.1 2002-10-14 10:48:59 alin_sinpalean Exp $";
+   public static final String cvsVersion = "$Id: TdsException.java,v 1.2 2004-04-06 03:01:53 bheineman Exp $";
 
 
    public TdsException(String msg)
