@@ -1,9 +1,6 @@
 package net.sourceforge.jtds.test;
 
-import junit.framework.TestCase;
-import java.io.*;
 import java.sql.*;
-import java.util.*;
 
 /**
  * @version 1.0
